Upload image to GCS on Main activity, also some cleaning of the toolbar, activity transitions done.

--- a/app/src/main/res/drawable/add_card_card.xml
+++ b/app/src/main/res/drawable/add_card_card.xml
@@ -1,5 +1,5 @@
 <ripple xmlns:android="http://schemas.android.com/apk/res/android"
-    android:color="@color/colorPrimary">
+    android:color="@color/colorPrimaryJmas">
     <item>
         <shape android:shape="oval">
             <solid android:color="?android:colorPrimaryDark" />
