--- a/app/src/main/res/layout/toolbar.xml
+++ b/app/src/main/res/layout/toolbar.xml
@@ -8,12 +8,4 @@
     android:background="?attr/colorPrimary"
     android:minHeight="?attr/actionBarSize"
     app:theme="@style/MyToolbar"
-    app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
-
-    <Spinner
-        android:id="@+id/topBarSpinner"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:dropDownVerticalOffset="-50dp"
-        android:dropDownSelector="@drawable/spinner_selector" />
-</android.support.v7.widget.Toolbar>
+    app:popupTheme="@style/ThemeOverlay.AppCompat.Light"></android.support.v7.widget.Toolbar>
