--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -9,8 +9,8 @@
     </style>
 
     <style name="AppTheme.Base" parent="Theme.AppCompat.Light">
-        <item name="colorPrimary">@color/colorPrimary</item>
-        <item name="colorPrimaryDark">@color/colorPrimaryDarker</item>
+        <item name="colorPrimary">@color/colorPrimaryJmas</item>
+        <item name="colorPrimaryDark">@color/colorPrimaryDarkerJmas</item>
         <item name="android:textColorHighlight">@color/white_locky</item>
         <item name="android:color">@color/white_locky</item>
         <item name="android:windowNoTitle">true</item>
