--- a/app/src/main/res/layout/circular_tooltip.xml
+++ b/app/src/main/res/layout/circular_tooltip.xml
@@ -2,5 +2,5 @@
 <TextView xmlns:android="http://schemas.android.com/apk/res/android"
     android:gravity="center"
     android:textSize="20sp"
-    android:textColor="@color/colorPrimary"
+    android:textColor="@color/colorPrimaryJmas"
     android:background="@drawable/circle"></TextView>
