--- a/app/src/main/res/layout/fragment_readings.xml
+++ b/app/src/main/res/layout/fragment_readings.xml
@@ -36,7 +36,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/linechartCardView"
-        android:layout_margin="10dp">
+        android:layout_margin="10dp"
+        android:transitionName="@string/transitionJmas">
 
         <com.db.chart.view.LineChartView xmlns:chart="http://schemas.android.com/apk/res-auto"
             android:id="@+id/linechart"
@@ -48,7 +49,7 @@
             chart:chart_labelColor="@color/label"
             chart:chart_typeface="Roboto-Regular.ttf"
             android:layout_margin="10dp"
-            android:background="@color/colorPrimary" />
+            android:background="@color/colorPrimaryJmas" />
     </android.support.v7.widget.CardView>
 
 
@@ -131,8 +132,8 @@
         android:layout_marginBottom="50dp"
         android:layout_marginRight="20dp"
         android:src="@drawable/ic_camera_alt_white_24dp"
-        fab:fab_colorNormal="@color/colorPrimary"
-        fab:fab_colorPressed="@color/colorPrimaryDarker" />
+        fab:fab_colorNormal="@color/colorPrimaryJmas"
+        fab:fab_colorPressed="@color/colorPrimaryDarkerJmas" />
 
     <com.melnykov.fab.FloatingActionButton
         android:id="@+id/fabPay"
@@ -144,8 +145,8 @@
         android:layout_marginRight="20dp"
         android:layout_marginTop="86dp"
         android:src="@drawable/ic_payment_white_24dp"
-        fab:fab_colorNormal="@color/colorPrimary"
-        fab:fab_colorPressed="@color/colorPrimaryDarker" />
+        fab:fab_colorNormal="@color/colorPrimaryJmas"
+        fab:fab_colorPressed="@color/colorPrimaryDarkerJmas" />
 
     <!--<Button-->
     <!--android:id="@+id/buttonPay"-->
