--- a/app/src/main/res/layout/com_parse_ui_parse_login_help_form.xml
+++ b/app/src/main/res/layout/com_parse_ui_parse_login_help_form.xml
@@ -25,7 +25,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/login_help_submit"
-        style="@style/RobotoButton"
+        style="@style/RobotoButtonOCR"
         android:layout_marginTop="@dimen/com_parse_ui_xlarge_vertical_spacing"
         android:text="@string/com_parse_ui_login_help_submit_button_label" />
 </LinearLayout>
