--- a/app/src/main/res/layout/activity_service_chooser.xml
+++ b/app/src/main/res/layout/activity_service_chooser.xml
@@ -11,20 +11,28 @@
     android:orientation="vertical"
     android:gravity="center">
 
-    <ImageView
-        android:layout_width="120dp"
-        android:layout_height="120dp"
-        android:id="@+id/imageView13"
-        android:src="@drawable/ocr_icon"
-        android:layout_marginTop="30dp" />
-
-    <com.devspark.robototextview.widget.RobotoTextView
-        style="@style/TextViewIntroTitle"
-        android:text="@string/titleContentServiceChooser"
-        android:textSize="20sp"
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:gravity="center"
-        android:layout_marginTop="20dp"
-        android:layout_marginBottom="40dp" />
+        android:layout_weight="1">
+
+        <ImageView
+            android:layout_width="120dp"
+            android:layout_height="120dp"
+            android:id="@+id/imageView13"
+            android:src="@drawable/logo"
+            android:layout_marginTop="30dp" />
+
+        <com.devspark.robototextview.widget.RobotoTextView
+            style="@style/TextViewIntroTitle"
+            android:text="@string/titleContentServiceChooser"
+            android:textSize="20sp"
+            android:gravity="center"
+            android:layout_marginTop="20dp"
+            android:layout_marginBottom="40dp" />
+    </LinearLayout>
 
     <LinearLayout
         android:orientation="horizontal"
@@ -32,7 +40,8 @@
         android:layout_height="200dp"
         android:padding="20dp"
         android:gravity="center"
-        android:layout_gravity="center">
+        android:layout_gravity="center"
+        android:layout_weight="1">
 
         <com.melnykov.fab.FloatingActionButton
             android:layout_width="wrap_content"
@@ -41,7 +50,7 @@
             app:fab_colorNormal="@color/colorPrimaryJmas"
             app:fab_colorPressed="@color/colorPrimaryDarkerJmas"
             android:transitionName="@string/transitionJmas"
-            android:src="@drawable/ic_launcher" />
+            android:src="@drawable/jmas_icon" />
 
         <com.melnykov.fab.FloatingActionButton
             android:layout_width="wrap_content"
