--- a/app/src/main/res/layout/fragment_intro_welcome.xml
+++ b/app/src/main/res/layout/fragment_intro_welcome.xml
@@ -13,7 +13,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/imageView11"
-        android:src="@drawable/splash"
+        android:src="@drawable/logo"
         android:layout_marginBottom="20dp" />
 
     <com.devspark.robototextview.widget.RobotoTextView
