--- a/app/src/main/res/layout/activity_camera_full_screen.xml
+++ b/app/src/main/res/layout/activity_camera_full_screen.xml
@@ -4,7 +4,7 @@
 
     <fragment
         android:id="@+id/camera_preview"
-        android:name="com.fourtails.usuariolecturista.camera.DemoCameraFragment"
+        android:name="com.fourtails.usuariolecturista.camera.CameraFragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
