--- a/app/src/main/res/layout/fragment_readings.xml
+++ b/app/src/main/res/layout/fragment_readings.xml
@@ -1,17 +1,24 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:fab="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    tools:context="com.vazh.android.golocky.app.balance.BalanceFragment">
+    android:orientation="vertical">
 
+
+    <ProgressBar
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/progressBarReadings"
+        android:layout_above="@+id/fabChangeGraph"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="44dp" />
 
     <android.support.v7.widget.CardView
         android:id="@+id/cardViewReadings"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="10dp">
+        android:layout_margin="10dp"
+        android:visibility="invisible">
 
         <com.db.chart.view.LineChartView xmlns:chart="http://schemas.android.com/apk/res-auto"
             android:id="@+id/lineChartReadings"
@@ -23,7 +30,9 @@
             chart:chart_axisBorderSpacing="0dp"
             chart:chart_axisColor="@color/axis"
             chart:chart_labelColor="@color/label"
-            chart:chart_typeface="Roboto-Regular.ttf" />
+            chart:chart_typeface="Roboto-Regular.ttf"
+            android:visibility="invisible"
+            android:padding="5dp" />
     </android.support.v7.widget.CardView>
 
     <com.melnykov.fab.FloatingActionButton
@@ -38,7 +47,7 @@
         fab:fab_colorNormal="@color/colorPrimaryJmas"
         fab:fab_colorPressed="@color/colorPrimaryDarkerJmas"
         android:transitionName="@string/transitionJmas"
-        android:layout_marginBottom="-25dp" />
+        android:layout_marginBottom="-40dp" />
 
 
     <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
@@ -72,7 +81,7 @@
             <com.devspark.robototextview.widget.RobotoTextView
                 android:id="@+id/textViewBillingDate"
                 style="@style/TextViewMainPage"
-                android:text="26 de Febrero 2015"
+                android:text="26 de Abril 2015"
                 android:textIsSelectable="true" />
 
             <com.devspark.robototextview.widget.RobotoTextView
@@ -82,9 +91,9 @@
                 android:text="@string/readingsLabelsTotalAmount" />
 
             <com.devspark.robototextview.widget.RobotoTextView
-                android:id="@+id/textViewTotalBalance"
+                android:id="@+id/textViewTotalReadingsForThisPeriod"
                 style="@style/TextViewMainPage"
-                android:text="100 lts" />
+                android:text="" />
 
             <com.devspark.robototextview.widget.RobotoTextView
                 android:id="@+id/textView2"
@@ -95,7 +104,7 @@
             <com.devspark.robototextview.widget.RobotoTextView
                 android:id="@+id/textViewLastReadingDate"
                 style="@style/TextViewMainPage"
-                android:text="2 de Febrero 2015" />
+                android:text="" />
 
         </LinearLayout>
     </android.support.v7.widget.CardView>
@@ -113,6 +122,13 @@
         android:layout_alignParentEnd="true"
         android:layout_marginBottom="25dp"
         android:layout_marginRight="20dp" />
+
+    <com.devspark.robototextview.widget.RobotoTextView
+        style="@style/TextViewIntroDesc"
+        android:text="@string/readingsLabelsNoReadingsToShow"
+        android:layout_alignTop="@+id/progressBarReadings"
+        android:layout_centerHorizontal="true"
+        android:id="@+id/textViewNoReadingsMsg" />
 
 
 </RelativeLayout>
