--- a/app/src/main/res/layout/fragment_add_credit_card.xml
+++ b/app/src/main/res/layout/fragment_add_credit_card.xml
@@ -4,18 +4,18 @@
     android:layout_height="fill_parent"
     tools:context="com.fourtails.usuariolecturista.PayAddCreditCardFragment"
     android:orientation="vertical"
-    android:padding="35dp">
+    android:padding="20dp">
 
-    <com.devspark.robototextview.widget.RobotoTextView
-        style="@style/TextViewLabelMedium"
-        android:text="@string/labelCreditCardType"
-        android:id="@+id/textView7" />
+    <!--<com.devspark.robototextview.widget.RobotoTextView-->
+    <!--style="@style/TextViewLabelMedium"-->
+    <!--android:text="@string/labelCreditCardType"-->
+    <!--android:id="@+id/textView7" />-->
 
-    <Spinner
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:entries="@array/drop_down_credit_card_type"
-        android:id="@+id/spinnerCreditCardSelector" />
+    <!--<Spinner-->
+    <!--android:layout_width="wrap_content"-->
+    <!--android:layout_height="wrap_content"-->
+    <!--android:entries="@array/drop_down_credit_card_type"-->
+    <!--android:id="@+id/spinnerCreditCardSelector" />-->
 
     <com.devspark.robototextview.widget.RobotoTextView
         style="@style/TextViewLabelMedium"
@@ -25,12 +25,12 @@
 
     <com.devspark.robototextview.widget.RobotoEditText
         style="@style/RobotoEditText"
-        android:layout_width="fill_parent"
+        android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:ems="10"
         android:id="@+id/editTextCreditCardNumber"
         android:inputType="number"
-        android:text="411111111111111" />
+        android:maxLength="16" />
 
     <com.devspark.robototextview.widget.RobotoTextView
         style="@style/TextViewLabelMedium"
@@ -46,35 +46,62 @@
         android:id="@+id/editTextCreditCardName"
         android:text="Carlos Labrado" />
 
-    <com.devspark.robototextview.widget.RobotoTextView
-        style="@style/TextViewLabelMedium"
-        android:text="@string/labelSecurityCode"
-        android:layout_marginTop="10dp"
-        android:id="@+id/textView10" />
-
-    <com.devspark.robototextview.widget.RobotoEditText
-        style="@style/RobotoEditText"
-        android:layout_width="50dp"
-        android:layout_height="wrap_content"
-        android:inputType="number"
-        android:ems="10"
-        android:id="@+id/editTextCCV"
-        android:text="111" />
-
-    <com.devspark.robototextview.widget.RobotoTextView
-        style="@style/TextViewLabelMedium"
-        android:text="@string/labelExpirationDate"
-        android:layout_marginTop="10dp"
-        android:id="@+id/textView11" />
-
-    <com.devspark.robototextview.widget.RobotoEditText
-        style="@style/RobotoEditText"
+    <RelativeLayout
+        android:orientation="horizontal"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:ems="10"
-        android:editable="false"
-        android:focusable="false"
-        android:id="@+id/editTextCreditCardExpirationDate" />
+        android:layout_height="wrap_content">
+
+        <LinearLayout
+            android:orientation="vertical"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="right"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentLeft="true">
+
+            <com.devspark.robototextview.widget.RobotoTextView
+                style="@style/TextViewLabelMedium"
+                android:text="@string/labelSecurityCode"
+                android:layout_marginTop="10dp"
+                android:id="@+id/textView10" />
+
+            <com.devspark.robototextview.widget.RobotoEditText
+                style="@style/RobotoEditText"
+                android:layout_width="50dp"
+                android:layout_height="wrap_content"
+                android:inputType="number"
+                android:ems="10"
+                android:id="@+id/editTextCCV"
+                android:text="111"
+                android:maxLength="4" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:orientation="vertical"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="left"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentRight="true"
+            android:layout_marginRight="40dp">
+
+            <com.devspark.robototextview.widget.RobotoTextView
+                style="@style/TextViewLabelMedium"
+                android:text="@string/labelExpirationDate"
+                android:layout_marginTop="10dp"
+                android:id="@+id/textView11" />
+
+            <com.devspark.robototextview.widget.RobotoEditText
+                style="@style/RobotoEditText"
+                android:layout_width="100dp"
+                android:layout_height="wrap_content"
+                android:ems="10"
+                android:editable="false"
+                android:focusable="false"
+                android:id="@+id/editTextCreditCardExpirationDate" />
+        </LinearLayout>
+
+    </RelativeLayout>
 
     <com.devspark.robototextview.widget.RobotoCheckBox
         style="@style/RobotoCheckBox"
@@ -84,12 +111,32 @@
         android:id="@+id/checkBoxAgreedTAC"
         android:checked="false" />
 
+    <com.devspark.robototextview.widget.RobotoTextView
+        style="@style/RobotoEditText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:ems="10"
+        android:id="@+id/textViewLabelSubTotalPay"
+        android:textSize="15sp"
+        android:text="@string/labelSubTotal"
+        android:layout_marginTop="20dp" />
+
+    <com.devspark.robototextview.widget.RobotoTextView
+        style="@style/RobotoEditText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:ems="10"
+        android:id="@+id/textViewSubTotalPay"
+        android:textSize="30sp"
+        android:text="132.00"
+        android:layout_marginTop="5dp" />
+
     <com.devspark.robototextview.widget.RobotoButton
         style="@style/RobotoButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/labelButtonAddCard"
-        android:id="@+id/buttonAddCreditCard"
+        android:text="@string/labelButtonPayFragmentPay"
+        android:id="@+id/buttonPayWithCC"
         android:layout_marginTop="10dp"
         android:layout_gravity="center_horizontal" />
 </LinearLayout>
