--- a/app/src/main/res/layout/activity_service_chooser.xml
+++ b/app/src/main/res/layout/activity_service_chooser.xml
@@ -26,22 +26,31 @@
             android:layout_marginTop="30dp" />
 
         <com.devspark.robototextview.widget.RobotoTextView
+            android:id="@+id/textViewIntroTitle"
             style="@style/TextViewIntroTitle"
             android:text="@string/titleContentServiceChooser"
             android:textSize="20sp"
             android:gravity="center"
             android:layout_marginTop="20dp"
             android:layout_marginBottom="40dp" />
+
     </LinearLayout>
+
+    <ProgressBar
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/progressBar"
+        android:indeterminate="true"
+        android:layout_gravity="center_horizontal"
+        android:layout_margin="20dp" />
 
     <LinearLayout
         android:orientation="horizontal"
         android:layout_width="fill_parent"
-        android:layout_height="200dp"
-        android:padding="20dp"
-        android:gravity="center"
-        android:layout_gravity="center"
-        android:layout_weight="1">
+        android:layout_height="250dp"
+        android:padding="25dp"
+        android:layout_weight="1"
+        android:gravity="center_horizontal">
 
         <com.melnykov.fab.FloatingActionButton
             android:layout_width="wrap_content"
